# dotfiles

./: .aider.conf.yml  .aliases  .bash_profile  .bashrc  .checksums  .chezmoi.toml.tmpl  .chezmoidata.toml  .chezmoiignore  .chezmoiignore.tmpl  .clinerules  .continuerc.json  .curlrc  .dockerignore  .editorconfig  .envrc  .eslintrc  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .integrity_log  .jshintrc  .luacheckrc  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.jsonc  .markdownlintignore  .npmrc  .pre-commit-config.yaml  .profile  .secrets.baseline  .security_test_results  .sops.yaml  .stylua.toml  .taplo.toml  .tmux.conf  .travis.yml  .typos.toml  .viminfo  .wgetrc  (+95 more)
.changeset/: config.json
.chezmoidata/: hardware.toml  themes.toml
.chezmoitemplates/: README.md  nix-catppuccin-apps.nix.tmpl  nix-catppuccin-config.nix.tmpl  nix-flake-theme-support.nix.tmpl  nix-home-manager-theme.nix.tmpl
.clusterfuzzlite/: Dockerfile  build.sh
.codex/: config.toml
.devcontainer/: Dockerfile  devcontainer.ci.json  devcontainer.json  install-full.sh  install-lite.sh
.gemini/: GEMINI.md
.github/: BRANCH_PROTECTION.md  CODE-OF-CONDUCT.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  ISSUE-TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  branch-protection-config.json  dependabot.yml
.roo/: rules.md
templates/projects/python/: .gitignore  README.md  pyproject.toml
templates/projects/python/.github/workflows/: ci.yml
templates/projects/python/src/__PROJECT_NAME__/: __init__.py
templates/projects/python/tests/: test_basic.py
(+3354 files in other folders)
