[project]
name = "__PROJECT_NAME__"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"
reportMissingTypeStubs = "none"
